--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: '3'
 services:
   app:
     build:
@@ -8,4 +8,4 @@ services:
       - ./:/usr/src/app
     command: sh -c "yarn start"
     ports:
-      - "3000:3000"
+      - '3000:3000'
