--- a/package.json
+++ b/package.json
@@ -59,5 +59,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src /**/*.{js,jsx,ts,tsx}": "lint"
   }
 }
