--- a/package.json
+++ b/package.json
@@ -67,5 +67,13 @@
   },
   "lint-staged": {
     "src /**/*.{js,jsx,ts,tsx}": "lint"
+  },
+  "devDependencies": {
+    "@types/eslint": "7.2.4",
+    "@types/eslint-plugin-prettier": "^3.1.0",
+    "@types/prettier": "^2.1.2",
+    "@types/stylelint": "^9.10.1",
+    "@types/testing-library__jest-dom": "^5.9.4",
+    "typesync": "^0.7.0"
   }
 }
