--- a/package.json
+++ b/package.json
@@ -41,8 +41,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
-    "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint": "yarn lint:es && yarn lint:style",
+    "lint:fix": "yarn lint:es:fix && yarn lint:style:fix",
+    "lint:es": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint:es:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint:style": "stylelint 'src/**/*.{css,scss,jsx,ts,tsx}'",
+    "lint:style:fix": "stylelint --fix 'src/**/*.{css,scss,jsx,ts,tsx}'",
     "lint:conflict": "npx eslint --print-config .eslintrc.js | npx eslint-config-prettier-check",
     "postinstall": "typesync"
   },
@@ -75,6 +79,7 @@
     "@types/prettier": "^2.1.2",
     "@types/stylelint": "^9.10.1",
     "@types/testing-library__jest-dom": "^5.9.4",
+    "stylelint-config-recess-order": "^2.1.0",
     "typesync": "^0.7.0"
   }
 }
