--- a/package.json
+++ b/package.json
@@ -71,7 +71,12 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": "yarn lint"
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "yarn lint:es:fix"
+    ],
+    "src/**/*.{css,scss,jsx,ts,tsx}": [
+      "yarn lint:style:fix"
+    ]
   },
   "devDependencies": {
     "@types/eslint": "7.2.4",
@@ -79,6 +84,7 @@
     "@types/prettier": "^2.1.2",
     "@types/stylelint": "^9.10.1",
     "@types/testing-library__jest-dom": "^5.9.4",
+    "eslint-plugin-prefer-arrow": "^1.2.2",
     "stylelint-config-recess-order": "^2.1.0",
     "typesync": "^0.7.0"
   }
