Dockerファイルの修正

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,16 @@
 version: '3'
 services:
-  app:
+  frontend:
     build:
       context: .
+    stdin_open: true
     tty: true
     volumes:
-      - ./:/usr/src/app
+      - ./:/usr/src/frontend
+      - node_modules:/usr/src/frontend/node_modules
     command: sh -c "yarn start"
     ports:
       - '3000:3000'
+volumes:
+  node_modules:
+    driver: local
