--- a/package.json
+++ b/package.json
@@ -82,9 +82,12 @@
     "@types/eslint": "7.2.4",
     "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/prettier": "^2.1.2",
+    "@types/react-redux": "^7.1.11",
     "@types/stylelint": "^9.10.1",
     "@types/testing-library__jest-dom": "^5.9.4",
     "eslint-plugin-prefer-arrow": "^1.2.2",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
     "stylelint-config-recess-order": "^2.1.0",
     "typesync": "^0.7.0"
   }
