--- a/package.json
+++ b/package.json
@@ -1,24 +1,41 @@
 {
   "name": "react-reversi",
   "version": "0.1.0",
-  "private": true,
-  "dependencies": {
+  "author": {
+    "name" : "Takuya Iwashiro",
+    "email" : "gutlo.ol0414@gmail.com"
+  },
+  "repository": {
+  "type": "git",
+  "url": "https://github.com/iwashiro-takuya/react-reversi.git"
+  },
+  "bugs": {
+    "url": "https://github.com/iwashiro-takuya/react-reversi/issues"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.4",
     "@testing-library/user-event": "^12.1.7",
+    "@types/eslint": "7.2.4",
+    "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.8",
+    "@types/prettier": "^2.1.2",
     "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.11",
     "@types/styled-components": "^5.1.4",
+    "@types/stylelint": "^9.10.1",
+    "@types/testing-library__jest-dom": "^5.9.4",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
-    "eslint": "7.11.0",
+    "eslint": "6.6.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prefer-arrow": "^1.2.2",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.4",
     "eslint-plugin-react-hooks": "^4.1.2",
@@ -28,13 +45,17 @@
     "prettier-stylelint": "^0.4.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.2",
     "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
     "styled-components": "^5.2.0",
     "stylelint": "^13.7.2",
     "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-recess-order": "^2.1.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0",
-    "typescript": "~4.0.3"
+    "typescript": "~4.0.3",
+    "typesync": "^0.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -77,18 +98,5 @@
     "src/**/*.{css,scss,jsx,ts,tsx}": [
       "yarn lint:style:fix"
     ]
-  },
-  "devDependencies": {
-    "@types/eslint": "7.2.4",
-    "@types/eslint-plugin-prettier": "^3.1.0",
-    "@types/prettier": "^2.1.2",
-    "@types/react-redux": "^7.1.11",
-    "@types/stylelint": "^9.10.1",
-    "@types/testing-library__jest-dom": "^5.9.4",
-    "eslint-plugin-prefer-arrow": "^1.2.2",
-    "react-redux": "^7.2.2",
-    "redux": "^4.0.5",
-    "stylelint-config-recess-order": "^2.1.0",
-    "typesync": "^0.7.0"
   }
 }
