--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "cypress:open": "cypress open",
     "lint": "yarn lint:es && yarn lint:style",
     "lint:fix": "yarn lint:es:fix && yarn lint:style:fix",
     "lint:es": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
