--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,14 +8,9 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
-    strategy:
-      matrix:
-        node-version: [14.x]
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: yarn install
-      - run: yarn cypress:cli
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Cypress.io
+        uses: cypress-io/github-action@v2.7.0
