--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,3 +14,5 @@ jobs:
         uses: actions/checkout@v2
       - name: Cypress.io
         uses: cypress-io/github-action@v2.7.0
+        with:
+          browser: chrome
