--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,4 +15,7 @@ jobs:
       - name: Cypress.io
         uses: cypress-io/github-action@v2.7.0
         with:
-          browser: chrome
+          build: yarn build
+          start: yarn start
+          wait-on: 'http://localhost:3000'
+          spec: cypress/integration/game.spec.js
