--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "cypress:open": "cypress open",
-    "cypress:cli": "cypress run -s cypress/integration/game.spec.js",
+    "cypress:run": "cypress run -s cypress/integration/game.spec.js",
     "lint": "yarn lint:es && yarn lint:style",
     "lint:fix": "yarn lint:es:fix && yarn lint:style:fix",
     "lint:es": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
