--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,7 @@ jobs:
         if: success()
         uses: rtCamp/action-slack-notify@v2.0.2
         env:
+          SLACK_CHANNEL: react-reversi-gh
           SLACK_TITLE: Test Success
           SLACK_COLOR: good
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
@@ -30,6 +31,7 @@ jobs:
         uses: rtCamp/action-slack-notify@v2.0.2
         if: failure()
         env:
+          SLACK_CHANNEL: react-reversi-gh
           SLACK_TITLE: Test Failure
           SLACK_COLOR: danger
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
