--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,7 @@ jobs:
         env:
           SLACK_CHANNEL: react-reversi-gh
           SLACK_TITLE: Test Success
+          SLACK_MESSAGE: 'CI Test Passed! :rocket:'
           SLACK_COLOR: good
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
       - name: Slack Notification on Failure
@@ -33,5 +34,6 @@ jobs:
         env:
           SLACK_CHANNEL: react-reversi-gh
           SLACK_TITLE: Test Failure
+          SLACK_MESSAGE: 'CI Test Failed! :boom:'
           SLACK_COLOR: danger
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
