--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.11",
+    "@types/react-test-renderer": "^17.0.0",
     "@types/styled-components": "^5.1.4",
     "@types/stylelint": "^9.10.1",
     "@types/testing-library__jest-dom": "^5.9.4",
@@ -49,6 +50,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.2",
     "react-scripts": "3.4.3",
+    "react-test-renderer": "^17.0.1",
     "redux": "^4.0.5",
     "styled-components": "^5.2.0",
     "stylelint": "^13.7.2",
