--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "@types/eslint": "7.2.4",
     "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/jest": "^26.0.14",
-    "@types/node": "^14.11.8",
+    "@types/node": "^14.14.31",
     "@types/prettier": "^2.1.2",
     "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.11",
     "@types/react-test-renderer": "^17.0.0",
+    "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.4",
     "@types/stylelint": "^9.10.1",
     "@types/testing-library__jest-dom": "^5.9.4",
@@ -58,6 +59,8 @@
     "react-scripts": "3.4.3",
     "react-test-renderer": "^17.0.1",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0",
     "stylelint": "^13.7.2",
     "stylelint-config-prettier": "^8.0.2",
