--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -22,8 +22,8 @@ jobs:
         uses: rtCamp/action-slack-notify@v2.0.2
         env:
           SLACK_CHANNEL: react-reversi-gh
-          SLACK_TITLE: Test Success
-          SLACK_MESSAGE: 'CI Test Passed! :rocket:'
+          SLACK_TITLE: CI Test Success
+          SLACK_MESSAGE: 'Unit Test Passed! :rocket:'
           SLACK_COLOR: good
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
       - name: Slack Notification on Failure
@@ -31,7 +31,7 @@ jobs:
         if: failure()
         env:
           SLACK_CHANNEL: react-reversi-gh
-          SLACK_TITLE: Test Failure
-          SLACK_MESSAGE: 'CI Test Failed! :boom:'
+          SLACK_TITLE: CI Test Failure
+          SLACK_MESSAGE: 'Unit Test Failed! :boom:'
           SLACK_COLOR: danger
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
