--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -1,4 +1,4 @@
-name: E2E Test
+name: integration Test
 
 on:
   pull_request:
@@ -8,7 +8,7 @@ on:
       - release/**
 
 jobs:
-  e2e-test-run:
+  integration-test-run:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -26,7 +26,7 @@ jobs:
         env:
           SLACK_CHANNEL: react-reversi-gh
           SLACK_TITLE: CI Test Success
-          SLACK_MESSAGE: 'E2E Test Passed! :rocket:'
+          SLACK_MESSAGE: 'integration Test Passed! :rocket:'
           SLACK_COLOR: good
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
       - name: Slack Notification on Failure
@@ -35,6 +35,6 @@ jobs:
         env:
           SLACK_CHANNEL: react-reversi-gh
           SLACK_TITLE: CI Test Failure
-          SLACK_MESSAGE: 'E2E Test Failed! :boom:'
+          SLACK_MESSAGE: 'integration Test Failed! :boom:'
           SLACK_COLOR: danger
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
