--- a/.github/workflows/lint-check.yml
+++ b/.github/workflows/lint-check.yml
@@ -8,7 +8,7 @@ on:
       - release/**
 
 jobs:
-  type-check-run:
+  lint-check-run:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
