--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@types/testing-library__jest-dom": "^5.9.4",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
-    "cypress": "^7.1.0",
+    "cypress": "^7.2.0",
     "eslint": "6.6.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.12.0",
@@ -55,6 +55,7 @@
     "prettier-stylelint": "^0.4.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^7.4.2",
     "react-redux": "^7.2.2",
     "react-scripts": "3.4.3",
     "react-test-renderer": "^17.0.1",
@@ -67,7 +68,7 @@
     "stylelint-config-recess-order": "^2.1.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0",
-    "typescript": "~4.0.3",
+    "typescript": "4.2.4",
     "typesync": "^0.7.0"
   },
   "scripts": {
