--- a/package.json
+++ b/package.json
@@ -113,12 +113,10 @@
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": [
       "yarn prettier --write",
-      "yarn lint:es:fix",
-      "git add"
+      "yarn lint:es:fix"
     ],
     "src/**/*.{css,scss,jsx,ts,tsx}": [
-      "yarn lint:style:fix",
-      "git add"
+      "yarn lint:style:fix"
     ]
   }
 }
