--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -19,4 +19,4 @@ jobs:
           build: yarn build
           start: yarn start
           wait-on: 'http://localhost:3000'
-          spec: cypress/integration/game.spec.ts
+          spec: cypress/e2e/game.cy.ts
