--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -12,10 +12,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Cypress.io
-        uses: cypress-io/github-action@v2.7.0
+        uses: cypress-io/github-action@v5
         with:
+          browser: chrome
           build: yarn build
           start: yarn start
           wait-on: 'http://localhost:3000'
