--- a/package.json
+++ b/package.json
@@ -1,14 +1,52 @@
 {
   "name": "react-reversi",
   "version": "1.8.0",
-  "author": "t-i-0414 <gutlo.ol0414@gmail.com> (https://github.com/t-i-0414/)",
   "homepage": "https://github.com/t-i-0414/react-reversi#readme",
-  "repository": "git@github.com:t-i-0414/react-reversi.git",
   "bugs": {
     "url": "https://github.com/t-i-0414/react-reversi/issues",
     "email": "gutlo.ol0414@gmail.com"
   },
+  "repository": "git@github.com:t-i-0414/react-reversi.git",
   "license": "MIT",
+  "author": "t-i-0414 <gutlo.ol0414@gmail.com> (https://github.com/t-i-0414/)",
+  "scripts": {
+    "build": "NODE_OPTIONS='--openssl-legacy-provider' react-scripts build",
+    "build-storybook": "NODE_OPTIONS='--openssl-legacy-provider' build-storybook -s public",
+    "cypress:open": "NODE_OPTIONS='--openssl-legacy-provider' cypress open",
+    "cypress:run": "NODE_OPTIONS='--openssl-legacy-provider' cypress run -s cypress/e2e/game.cy.ts cypress open",
+    "eject": "react-scripts eject",
+    "postinstall": "typesync",
+    "lint": "yarn lint:es && yarn lint:style",
+    "lint:conflict": "npx eslint --print-config .eslintrc.js | npx eslint-config-prettier-check",
+    "lint:es": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint:es:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint:fix": "yarn lint:es:fix && yarn lint:style:fix",
+    "lint:style": "stylelint 'src/**/*.{css,scss,jsx,ts,tsx}'",
+    "lint:style:fix": "stylelint --fix 'src/**/*.{css,scss,jsx,ts,tsx}'",
+    "prepare": "husky install",
+    "start": "NODE_OPTIONS='--openssl-legacy-provider' react-scripts start",
+    "storybook": "NODE_OPTIONS='--openssl-legacy-provider' start-storybook -p 6006 -s public",
+    "test": "NODE_OPTIONS='--openssl-legacy-provider' react-scripts test",
+    "type-check": "yarn tsc --noEmit --skipLibCheck"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "dependencies": {
+    "sort-package-json": "^2.4.1"
+  },
   "devDependencies": {
     "@storybook/addon-actions": "^6.1.17",
     "@storybook/addon-essentials": "^6.1.17",
@@ -66,40 +104,5 @@
     "stylelint-order": "^4.1.0",
     "typescript": "4.2.4",
     "typesync": "^0.7.0"
-  },
-  "scripts": {
-    "start": "NODE_OPTIONS='--openssl-legacy-provider' react-scripts start",
-    "build": "NODE_OPTIONS='--openssl-legacy-provider' react-scripts build",
-    "test": "NODE_OPTIONS='--openssl-legacy-provider' react-scripts test",
-    "eject": "react-scripts eject",
-    "cypress:open": "NODE_OPTIONS='--openssl-legacy-provider' cypress open",
-    "cypress:run": "NODE_OPTIONS='--openssl-legacy-provider' cypress run -s cypress/e2e/game.cy.ts cypress open",
-    "lint": "yarn lint:es && yarn lint:style",
-    "lint:fix": "yarn lint:es:fix && yarn lint:style:fix",
-    "lint:es": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
-    "lint:es:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'",
-    "lint:style": "stylelint 'src/**/*.{css,scss,jsx,ts,tsx}'",
-    "lint:style:fix": "stylelint --fix 'src/**/*.{css,scss,jsx,ts,tsx}'",
-    "lint:conflict": "npx eslint --print-config .eslintrc.js | npx eslint-config-prettier-check",
-    "postinstall": "typesync",
-    "storybook": "NODE_OPTIONS='--openssl-legacy-provider' start-storybook -p 6006 -s public",
-    "build-storybook": "NODE_OPTIONS='--openssl-legacy-provider' build-storybook -s public",
-    "type-check": "yarn tsc --noEmit --skipLibCheck",
-    "prepare": "husky install"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
