--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -17,7 +17,7 @@ jobs:
         uses: cypress-io/github-action@v5
         with:
           browser: chrome
-          build: yarn build
-          start: yarn start
+          build: pnpm build
+          start: pnpm start
           wait-on: 'http://localhost:3000'
           spec: cypress/e2e/game.cy.ts
