--- a/.github/workflows/lint-check.yml
+++ b/.github/workflows/lint-check.yml
@@ -14,6 +14,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install dependencies
-        run: yarn install
+        run: pnpm install
       - name: Lint Check run
-        run: yarn lint
+        run: pnpm lint
