--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -14,6 +14,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install dependencies
-        run: yarn install
+        run: pnpm install
       - name: Unit test run
-        run: yarn test
+        run: pnpm test
