--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,5 @@
 {
-  "src/**/*.{js,jsx,ts,tsx}": ["yarn prettier --write", "yarn lint:es:fix"],
-  "src/**/*.{css,scss,jsx,ts,tsx}": ["yarn lint:style:fix"],
+  "src/**/*.{js,jsx,ts,tsx}": ["pnpm prettier --write", "pnpm lint:es:fix"],
+  "src/**/*.{css,scss,jsx,ts,tsx}": ["pnpm lint:style:fix"],
   "./package.json": ["sort-package-json", "sort-package-json --check"]
 }
