--- a/.eslintignore
+++ b/.eslintignore
@@ -1,9 +1,6 @@
+**/node_modules/
 build/
 public/
-**/coverage/
-**/node_modules/
-**/*.min.js
-*.config.js
 .eslintrc.js
-serviceWorker.ts
-cypress/
+.stylelintrc.js
+cypress.config.ts
