--- a/package.json
+++ b/package.json
@@ -10,24 +10,23 @@
   "license": "MIT",
   "author": "t-i-0414 <gutlo.ol0414@gmail.com> (https://github.com/t-i-0414/)",
   "scripts": {
-    "build": "NODE_OPTIONS='--openssl-legacy-provider' react-scripts build",
-    "build-storybook": "NODE_OPTIONS='--openssl-legacy-provider' build-storybook -s public",
-    "cypress:open": "NODE_OPTIONS='--openssl-legacy-provider' cypress open",
-    "cypress:run": "NODE_OPTIONS='--openssl-legacy-provider' cypress run -s cypress/e2e/game.cy.ts cypress open",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "postinstall": "typesync",
     "lint": "pnpm lint:es && pnpm lint:style",
-    "lint:conflict": "npx eslint --print-config .eslintrc.js | npx eslint-config-prettier-check",
-    "lint:es": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
-    "lint:es:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "pnpm lint:es:fix && pnpm lint:style:fix",
+    "lint:es": "eslint './**/*.{js,jsx,ts,tsx}' --cache --ignore-path ./.eslintignore",
+    "lint:es:fix": "eslint --fix './**/*.{js,jsx,ts,tsx}' --cache --ignore-path ./.eslintignore",
     "lint:style": "stylelint 'src/**/*.{css,scss,jsx,ts,tsx}'",
     "lint:style:fix": "stylelint --fix 'src/**/*.{css,scss,jsx,ts,tsx}'",
     "prepare": "husky install",
-    "start": "NODE_OPTIONS='--openssl-legacy-provider' react-scripts start",
     "storybook": "NODE_OPTIONS='--openssl-legacy-provider' start-storybook -p 6006 -s public",
+    "build-storybook": "NODE_OPTIONS='--openssl-legacy-provider' build-storybook -s public",
     "test": "NODE_OPTIONS='--openssl-legacy-provider' react-scripts test",
-    "type-check": "pnpm tsc --noEmit --skipLibCheck"
+    "cypress:open": "NODE_OPTIONS='--openssl-legacy-provider' cypress open",
+    "cypress:run": "NODE_OPTIONS='--openssl-legacy-provider' cypress run -s cypress/e2e/game.cy.ts cypress open",
+    "type-check": "pnpm tsc --noEmit",
+    "typesync": "pnpm dlx typesync"
   },
   "browserslist": {
     "production": [
@@ -41,12 +40,9 @@
       "last 1 safari version"
     ]
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.4.2",
     "react-redux": "^7.2.2",
     "react-scripts": "5.0.1",
@@ -54,10 +50,12 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0",
-    "typescript": "4.2.4",
+    "tslib": "^2.5.0",
+    "typescript": "4.9.5",
     "typesync": "^0.7.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.4.3",
     "@storybook/addon-actions": "^6.1.17",
     "@storybook/addon-essentials": "^6.1.17",
     "@storybook/addon-links": "^6.1.17",
@@ -68,8 +66,7 @@
     "@testing-library/react": "^11.0.4",
     "@testing-library/user-event": "^12.1.7",
     "@types/eslint": "7.2.4",
-    "@types/eslint-plugin-prettier": "^3.1.0",
-    "@types/jest": "^26.0.14",
+    "@types/jest": "^26.0.24",
     "@types/node": "^14.14.31",
     "@types/prettier": "^2.1.2",
     "@types/react": "^16.9.52",
@@ -84,16 +81,21 @@
     "@typescript-eslint/parser": "^5.53.0",
     "cypress": "^12.6.0",
     "eslint": "8.34.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prefer-arrow": "^1.2.2",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.4",
-    "eslint-plugin-react-hooks": "^4.1.2",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-node": "^0.3.7",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.10",
+    "eslint-plugin-testing-library": "^5.10.2",
     "husky": "^8.0.0",
+    "jest": "^29.4.3",
     "lint-staged": "^13.1.2",
     "prettier": "^2.1.2",
     "prettier-stylelint": "^0.4.2",
@@ -103,6 +105,7 @@
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recess-order": "^2.1.0",
     "stylelint-config-standard": "^20.0.0",
-    "stylelint-order": "^4.1.0"
+    "stylelint-order": "^4.1.0",
+    "ts-jest": "^29.0.5"
   }
 }
