--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
   "license": "MIT",
   "author": "t-i-0414 <gutlo.ol0414@gmail.com> (https://github.com/t-i-0414/)",
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
+    "build-storybook": "NODE_OPTIONS='--openssl-legacy-provider' build-storybook -s public",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run -s cypress/e2e/game.cy.ts cypress open",
     "eject": "react-scripts eject",
     "lint": "pnpm lint:es && pnpm lint:style",
-    "lint:fix": "pnpm lint:es:fix && pnpm lint:style:fix",
     "lint:es": "eslint './**/*.{js,jsx,ts,tsx}' --cache --ignore-path ./.eslintignore",
     "lint:es:fix": "eslint --fix './**/*.{js,jsx,ts,tsx}' --cache --ignore-path ./.eslintignore",
+    "lint:fix": "pnpm lint:es:fix && pnpm lint:style:fix",
     "lint:style": "stylelint 'src/**/*.{css,scss,jsx,ts,tsx}'",
     "lint:style:fix": "stylelint --fix 'src/**/*.{css,scss,jsx,ts,tsx}'",
     "prepare": "husky install",
+    "start": "react-scripts start",
     "storybook": "NODE_OPTIONS='--openssl-legacy-provider' start-storybook -p 6006 -s public",
-    "build-storybook": "NODE_OPTIONS='--openssl-legacy-provider' build-storybook -s public",
-    "test": "NODE_OPTIONS='--openssl-legacy-provider' react-scripts test",
-    "cypress:open": "NODE_OPTIONS='--openssl-legacy-provider' cypress open",
-    "cypress:run": "NODE_OPTIONS='--openssl-legacy-provider' cypress run -s cypress/e2e/game.cy.ts cypress open",
+    "test": "react-scripts test",
     "type-check": "pnpm tsc --noEmit",
     "typesync": "pnpm dlx typesync"
   },
