--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "storybook": "NODE_OPTIONS='--openssl-legacy-provider' start-storybook -p 6006 -s public",
     "test": "react-scripts test",
     "type-check": "pnpm tsc --noEmit",
-    "typesync": "pnpm dlx typesync"
+    "typesync": "pnpm dlx typesync",
+    "upgrade-interactive": "npm-check --update"
   },
   "browserslist": {
     "production": [
@@ -41,6 +42,7 @@
     ]
   },
   "dependencies": {
+    "npm-check": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.4.2",
@@ -52,7 +54,7 @@
     "styled-components": "^5.2.0",
     "tslib": "^2.5.0",
     "typescript": "4.9.5",
-    "typesync": "^0.7.0"
+    "typesync": "^0.10.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.4.3",
@@ -63,16 +65,16 @@
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.17",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.0.4",
-    "@testing-library/user-event": "^12.1.7",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/eslint": "7.2.4",
     "@types/jest": "^26.0.24",
     "@types/node": "^14.14.31",
     "@types/prettier": "^2.1.2",
-    "@types/react": "^16.9.52",
-    "@types/react-dom": "^16.9.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "@types/react-redux": "^7.1.11",
-    "@types/react-test-renderer": "^17.0.0",
+    "@types/react-test-renderer": "^18.0.0",
     "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.4",
     "@types/stylelint": "^9.10.1",
@@ -99,7 +101,7 @@
     "lint-staged": "^13.1.2",
     "prettier": "^2.1.2",
     "prettier-stylelint": "^0.4.2",
-    "react-test-renderer": "^17.0.1",
+    "react-test-renderer": "^18.2.0",
     "sort-package-json": "^2.4.1",
     "stylelint": "^13.7.2",
     "stylelint-config-prettier": "^8.0.2",
