--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "test": "react-scripts test",
     "type-check": "pnpm tsc --noEmit",
     "typesync": "pnpm dlx typesync",
-    "upgrade-interactive": "npm-check --update"
+    "upgrade-interactive": "npm-check"
   },
   "browserslist": {
     "production": [
@@ -42,7 +42,6 @@
     ]
   },
   "dependencies": {
-    "npm-check": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.4.2",
@@ -67,9 +66,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/eslint": "7.2.4",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^14.14.31",
+    "@types/eslint": "8.21.1",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.14.1",
     "@types/prettier": "^2.1.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -82,7 +81,7 @@
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "cypress": "^12.6.0",
-    "eslint": "8.34.0",
+    "eslint": "8.35.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-node": "^0.3.7",
@@ -99,6 +98,7 @@
     "husky": "^8.0.0",
     "jest": "^29.4.3",
     "lint-staged": "^13.1.2",
+    "npm-check": "^6.0.1",
     "prettier": "^2.1.2",
     "prettier-stylelint": "^0.4.2",
     "react-test-renderer": "^18.2.0",
