--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
     "incremental": true,
     "isolatedModules": true
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "cypress"]
 }
