--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-reversi",
   "version": "1.8.0",
-  "homepage": "https://github.com/t-i-0414/react-reversi#readme",
+  "homepage": "https://happy-williams-02dc8b.netlify.app/",
   "bugs": {
     "url": "https://github.com/t-i-0414/react-reversi/issues",
     "email": "gutlo.ol0414@gmail.com"
@@ -10,11 +10,11 @@
   "license": "MIT",
   "author": "t-i-0414 <gutlo.ol0414@gmail.com> (https://github.com/t-i-0414/)",
   "scripts": {
-    "build": "react-scripts build",
+    "build": "craco build",
     "build-storybook": "NODE_OPTIONS='--openssl-legacy-provider' build-storybook -s public",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run -s cypress/e2e/game.cy.ts cypress open",
-    "eject": "react-scripts eject",
+    "cypress:run": "cypress run --spec 'cypress/e2e/*.{spec,cy}.ts'",
+    "eject": "craco eject",
     "lint": "pnpm lint:es && pnpm lint:style",
     "lint:es": "eslint './**/*.{js,jsx,ts,tsx}' --cache --ignore-path ./.eslintignore",
     "lint:es:fix": "eslint --fix './**/*.{js,jsx,ts,tsx}' --cache --ignore-path ./.eslintignore",
@@ -22,9 +22,9 @@
     "lint:style": "stylelint 'src/**/*.{css,scss,jsx,ts,tsx}'",
     "lint:style:fix": "stylelint --fix 'src/**/*.{css,scss,jsx,ts,tsx}'",
     "prepare": "husky install",
-    "start": "react-scripts start",
+    "start": "craco start",
     "storybook": "NODE_OPTIONS='--openssl-legacy-provider' start-storybook -p 6006 -s public",
-    "test": "react-scripts test",
+    "test": "craco test",
     "type-check": "pnpm tsc --noEmit",
     "typesync": "pnpm dlx typesync",
     "upgrade-interactive": "npm-check -u"
@@ -42,6 +42,7 @@
     ]
   },
   "dependencies": {
+    "@craco/craco": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.4.2",
