--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "cypress:open": "cypress open",
     "cypress:run": "cypress run --spec 'cypress/e2e/*.{spec,cy}.ts'",
     "eject": "craco eject",
-    "lint": "pnpm lint:es && pnpm lint:style",
-    "lint:es": "eslint './**/*.{js,jsx,ts,tsx}' --cache --ignore-path ./.eslintignore",
-    "lint:es:fix": "eslint --fix './**/*.{js,jsx,ts,tsx}' --cache --ignore-path ./.eslintignore",
-    "lint:fix": "pnpm lint:es:fix && pnpm lint:style:fix",
+    "format": "run-p \"format:*\"",
+    "format:es": "eslint --fix './**/*.{js,jsx,ts,tsx}' --ignore-path ./.eslintignore",
+    "format:prettier": "prettier --write './*' --ignore-unknown --ignore-path ./.prettierignore",
+    "format:sort-package-json": "sort-package-json package.json",
+    "format:style": "stylelint --fix 'src/**/*.{css,scss,jsx,ts,tsx}'",
+    "lint": "run-p \"lint:*\"",
+    "lint:es": "eslint './**/*.{js,jsx,ts,tsx}' --ignore-path ./.eslintignore",
+    "lint:prettier": "prettier  --check './*' --ignore-unknown --ignore-path ./.prettierignore",
+    "lint:sort-package-json": "sort-package-json --check \"package.json\"",
     "lint:style": "stylelint 'src/**/*.{css,scss,jsx,ts,tsx}'",
-    "lint:style:fix": "stylelint --fix 'src/**/*.{css,scss,jsx,ts,tsx}'",
     "prepare": "husky install",
     "start": "craco start",
     "storybook": "NODE_OPTIONS='--openssl-legacy-provider' start-storybook -p 6006 -s public",
@@ -43,6 +47,7 @@
   },
   "dependencies": {
     "@craco/craco": "^7.0.0",
+    "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.4.2",
