--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,13 @@
 {
-  "extends": "./tsconfig.path.json",
   "compilerOptions": {
     "target": "ES5",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "module": "ESNext",
     "noEmit": true,
+    "baseUrl": ".",
+    "paths": {
+      "~/*": ["./src/*"]
+    },
     "jsx": "preserve",
     "resolveJsonModule": true,
     "declaration": true,
@@ -22,5 +25,5 @@
     "incremental": true,
     "isolatedModules": true
   },
-  "exclude": ["node_modules", "cypress"]
+  "exclude": ["node_modules"]
 }
