--- a/.github/workflows/type-check.yml
+++ b/.github/workflows/type-check.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - uses: pnpm/action-setup@v2.2.4
+        with:
+          version: 7.28.0
       - name: Install dependencies
         run: pnpm install
       - name: Type Check run
