--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -19,4 +19,4 @@ jobs:
       - name: Install dependencies
         run: pnpm install
       - name: Unit test run
-        run: pnpm test
+        run: pnpm jest
