--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "t-i-0414 <gutlo.ol0414@gmail.com> (https://github.com/t-i-0414/)",
   "scripts": {
     "build": "craco build",
-    "build-storybook": "NODE_OPTIONS='--openssl-legacy-provider' build-storybook -s public",
+    "build-storybook": "build-storybook -s public",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run --spec 'cypress/e2e/*.{spec,cy}.ts'",
     "eject": "craco eject",
@@ -27,7 +27,7 @@
     "lint:style": "stylelint 'src/**/*.{css,scss,jsx,ts,tsx}'",
     "prepare": "husky install",
     "start": "craco start",
-    "storybook": "NODE_OPTIONS='--openssl-legacy-provider' start-storybook -p 6006 -s public",
+    "storybook": "start-storybook -p 6006 -s public",
     "test": "jest",
     "type-check": "pnpm tsc --noEmit",
     "typesync": "pnpm dlx typesync",
@@ -63,13 +63,15 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.4.3",
-    "@storybook/addon-actions": "^6.1.17",
-    "@storybook/addon-essentials": "^6.1.17",
-    "@storybook/addon-links": "^6.1.17",
-    "@storybook/node-logger": "^6.1.17",
-    "@storybook/preset-create-react-app": "^3.1.5",
-    "@storybook/react": "^6.1.17",
-    "@testing-library/jest-dom": "^5.11.4",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-interactions": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/builder-webpack5": "^6.5.16",
+    "@storybook/manager-webpack5": "^6.5.16",
+    "@storybook/node-logger": "^6.5.16",
+    "@storybook/react": "^6.5.16",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/eslint": "8.21.1",
@@ -99,7 +101,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-storybook": "^0.6.10",
+    "eslint-plugin-storybook": "^0.6.11",
     "eslint-plugin-testing-library": "^5.10.2",
     "husky": "^8.0.0",
     "jest": "^29.4.3",
