--- a/package.json
+++ b/package.json
@@ -84,7 +84,6 @@
     "@types/react-test-renderer": "^18.0.0",
     "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.4",
-    "@types/stylelint": "^9.10.1",
     "@types/testing-library__jest-dom": "^5.9.4",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
@@ -107,15 +106,14 @@
     "jest": "^29.4.3",
     "lint-staged": "^13.1.2",
     "npm-check": "^6.0.1",
+    "postcss-styled-syntax": "^0.4.0",
     "prettier": "^2.1.2",
     "prettier-stylelint": "^0.4.2",
     "react-test-renderer": "^18.2.0",
     "sort-package-json": "^2.4.1",
-    "stylelint": "^13.7.2",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-recess-order": "^2.1.0",
-    "stylelint-config-standard": "^20.0.0",
-    "stylelint-order": "^4.1.0",
+    "stylelint": "^15.2.0",
+    "stylelint-config-recess-order": "^4.0.0",
+    "stylelint-config-standard": "^30.0.1",
     "ts-jest": "^29.0.5"
   }
 }
