--- a/package.json
+++ b/package.json
@@ -118,5 +118,6 @@
     "stylelint-config-recess-order": "^4.0.0",
     "stylelint-config-standard": "^32.0.0",
     "ts-jest": "^29.0.5"
-  }
+  },
+  "packageManager": "pnpm@8.1.0"
 }
