--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/babel__preset-env": "^7.9.2",
     "@types/eslint": "8.37.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
@@ -115,7 +116,6 @@
     "prettier": "^2.8.7",
     "prettier-stylelint": "^0.4.2",
     "react-test-renderer": "^18.2.0",
-    "remark-gfm": "^3.0.1",
     "sort-package-json": "^2.4.1",
     "storybook": "^7.0.2",
     "stylelint": "^15.4.0",
