--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "moduleResolution": "node",
-    "incremental": true
+    "moduleResolution": "node"
   },
   "exclude": ["node_modules"]
 }
