--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,11 +90,5 @@ jobs:
       - name: Install Playwright
         run: pnpm dlx playwright install --with-deps
 
-      - name: Build Storybook
-        run: pnpm build-storybook --quiet
-
       - name: Serve Storybook and run tests
-        run: |
-          pnpm dlx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
-            "pnpm dlx http-server storybook-static --port 6006 --silent" \
-            "pnpm dlx wait-on tcp:6006 && pnpm test-storybook"
+        run: test-storybook:ci
