--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "lint:sort-package-json": "sort-package-json --check \"package.json\"",
     "lint:style": "stylelint 'src/**/*.{css,scss,jsx,ts,tsx}'",
     "prepare": "husky install",
+    "run-ci:test-storybook": "run-p storybook:ci test-storybook:ci",
     "start": "craco start",
     "storybook": "storybook dev -p 6006",
-    "storybook:ci": "storybook dev -p 6006 --ci --no-open",
+    "storybook:ci": "pm2 start 'storybook dev -p 6006 --ci --no-open' --name storybook:ci",
     "test": "jest",
     "test-storybook": "test-storybook",
-    "test-storybook:ci": "run-p storybook:ci test-storybook",
+    "test-storybook:ci": "pnpm dlx wait-on tcp:6006 && yarn test-storybook",
     "type-check": "pnpm tsc --noEmit",
     "typesync": "pnpm dlx typesync",
     "upgrade-interactive": "npm-check -u"
