chore: update tsconfig

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "module": "commonjs",
-    "types": ["cypress"]
+    "types": ["cypress"],
+    "declarationMap": false
   },
   "include": ["."],
   "exclude": ["node_modules"]
